# Quoting-Copilot

./: .env.example  .gitignore  CLAUDE.md  PROJECT_CONTEXT.md  README.md  conductor.json  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260202_001_create_materials_table.py  20260203_initial_schema.py  20260203_process_rate_mhr_split.py  20260203_process_routes.py  20260203_product_process_extension.py  20260204_add_bom_material_fields.py  20260204_add_process_rate_depreciation.py
backend/app/: __init__.py  config.py  main.py
backend/app/core/: config.py  database.py  value_objects.py
backend/app/db/: init_db.py  seed_test_data.py  session.py
backend/app/models/: __init__.py  amortization_strategy.py  business_case.py  cost_center.py  investment_item.py  material.py  process_rate.py  process_route.py  product_material.py  product_process.py  project.py  project_product.py  quote_summary.py
backend/app/schemas/: __init__.py  bom.py  business_case.py  common.py  cost.py  investment.py  material.py  process.py  process_route.py  project.py
backend/app/services/: __init__.py  ai_service.py  bom_parser.py  business_case_service.py  cache_service.py  calculation.py  investment_service.py  material_service.py
backend/app/tests/: conftest.py  test_calculation.py  test_e2e.py
backend/scripts/: add_test_data.py
backend/tests/: conftest.py  factories.py
backend/tests/api/: test_bom_api.py  test_costs_api.py  test_materials_api.py  test_projects_api.py
backend/tests/unit/: test_bom_parser.py  test_price_pair.py
(+133 files in other folders)
